demo-run lane: sge's pong RUNS on the ported stack — 120 frames rendered, exit 0 (JVM, macOS); frame budget through the adjusted launcher; runs column in port-status; the one runtime defect (invoke under fold inferred Nothing) ascribed